# gstreamer-lab

./: .clang  .gitignore  CMakeLists.txt  README.md  compile_commands.json  install_linux.sh
basic_tutorial_1/: CMakeLists.txt  main.c
basic_tutorial_2/: CMakeLists.txt  main.c
basic_tutorial_2a/: CMakeLists.txt  main.c
basic_tutorial_3/: CMakeLists.txt  main.c
basic_tutorial_3a/: CMakeLists.txt  main.c
basic_tutorial_4/: CMakeLists.txt
basic_tutorial_4_simple_plugin/: main.cpp
basic_tutorial_4_simple_plugin/gst-plugin/src/: gstmyfilter.h
basic_tutorial_5_video_plugin/: CMakeLists.txt
basic_tutorial_5_video_plugin/gst-plugin/src/: gstmyvideo.c
basics1/: CMakeLists.txt
basics2/: main.c
ds_test_1/: CMakeLists.txt  Makefile  deepstream-test1-app  dstest1_pgie_config.txt
ds_test_2/: CMakeLists.txt  Makefile  dstest1_pgie_config.txt  main.c  sentinel-test-2
nvidio_deep_stream_with_plugin/: CMakeLists.txt  README  deepstream_test1_app.cpp  dstest1_pgie_config.txt
nvidio_deep_stream_with_plugin/gst-plugin/src/: boilerplate.h  gstmyvideo.cpp  gstmyvideo.h
plugin_tutorial_1_simple_pass/: CMakeLists.txt  README
plugin_tutorial_1_simple_pass/gst-plugin/src/: boilerplate.h  gstmyfilter.c
plugin_tutorial_2_video/: CMakeLists.txt  README  main.cpp
plugin_tutorial_2_video/gst-plugin/src/: gstmyvideo.c  gstmyvideo.h
plugin_tutorial_2_video_cross_painter/: CMakeLists.txt  README
plugin_tutorial_2_video_cross_painter/gst-plugin/src/: boilerplate.h  gstmyvideo.cpp  gstmyvideo.h
scripts/: install_dependencies_linux.sh  uninstall_gst_framework_macos.py
